@@ -5,6 +5,7 @@ v0.0.14 2014-12-12
 * Improved composer / credit handling
 * HTML output now includes composer / credit if present
 * Added support for (+) to denote coda symbol
+* Added support for inline annotations using [, ] and _ for spaces
 
 v0.0.13 2013-11-24
 
